--- a/index.html
+++ b/index.html
@@ -5,9 +5,47 @@
   <title>Tic Tac Toe</title>
   <link href="stylesheets/index.css" rel="stylesheet" type="text/css" media="all" />
 </head>
-<body>
-  <div class="container">
-    <!-- write your html -->
+<body class="">
+  <div class="l-flex l-container">
+    <main class="l-main">
+      <header class="header">
+        <h1>TIC TAC TOE</h1>
+      </header>
+      <div class="display">
+        <div class="turn">
+          <div class="turn-symbol circle active">◯</div>
+          <div class="turn-symbol cross">✕</div>
+        </div>
+      </div>
+      <div class="state">
+        <span class="state-message">aaaa</span>
+      </div>
+      <div class="l-board">
+        <table class="table js-table">
+          <tbody>
+            <tr class="board-row">
+              <td class="cell js-cell" data-key = 1></td>
+              <td class="cell js-cell" data-key = 2></td>
+              <td class="cell js-cell" data-key = 3></td>
+            </tr>
+            <tr class="board-row">
+              <td class="cell js-cell" data-key = 4></td>
+              <td class="cell js-cell" data-key = 5></td>
+              <td class="cell js-cell" data-key = 6></td>
+            </tr>
+            <tr class="board-row">
+              <td class="cell js-cell" data-key = 7></td>
+              <td class="cell js-cell" data-key = 8></td>
+              <td class="cell js-cell" data-key = 9></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="l-footer footer">
+        <div class="state-message js-state-message">starting...</div>
+        <a class="button js-restart">RESTART</a>
+      </div>
+    </main>
   </div>
   <script type="text/javascript" src="js/function.js"></script>
 </body>
