--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
       </header>
       <div class="display">
         <div class="turn">
-          <div class="turn-symbol circle active">◯</div>
-          <div class="turn-symbol cross">✕</div>
+          <div class="turn-symbol circle active">○</div>
+          <div class="turn-symbol cross">×</div>
         </div>
       </div>
       <div class="state">
-        <span class="state-message">aaaa</span>
+        <span class="state-message"></span>
       </div>
       <div class="l-board">
         <table class="table js-table">
