--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       </header>
       <div class="display">
         <div class="turn">
-          <div class="turn-symbol circle active">○</div>
-          <div class="turn-symbol cross">×</div>
+          <div class="js-turn-symbol circle active">○</div>
+          <div class="js-turn-symbol cross">×</div>
         </div>
       </div>
       <div class="state">
